--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="2"
+        android:weightSum="3"
         >
     <Button
         android:layout_width="wrap_content"
@@ -48,7 +48,12 @@
         android:text="@string/first_btn"
         android:layout_weight="1"
         style="?android:attr/buttonBarButtonStyle" />
-    <Button
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        />
+        <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -76,7 +81,10 @@
         android:inputType="number"
         android:minHeight="48dp" />
 
-
+<LinearLayout
+    android:gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <Button
         android:id="@+id/login"
         android:text="@string/log_in"
@@ -85,4 +93,28 @@
         android:layout_height="wrap_content"
         android:onClick="logInClicked"
         />
+    <Button
+        android:id="@+id/signup"
+        android:text="@string/sign_up"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+    <Button
+        android:id="@+id/help"
+        android:text="@string/help"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        />
+    <Button
+        android:id="@+id/help2"
+        android:text="OnLine Help"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+</LinearLayout>
+
 </LinearLayout>
